Thu Jan  4 21:33:38 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gssapiP_generic.h: Don't include <sys/types.h> since it's
		already included by gssapi.h.

	* gssapi.h: Add a #ifndef _MACINTOSH around include of <sys/types.h>

Fri Nov 17 22:21:58 1995    <tytso@rsts-11.mit.edu>

	* Makefile.in, ChangeLog: Add support to compile shared libraries.

	* gssapi.h: Include sys/types.h, since that's where POSIX says
		size_t is defined.

Fri Oct  6 22:01:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Fri Sep 29 02:02:35 1995  Theodore Y. Ts'o  <tytso@dcl>

	* gssapi.h: For MS-DOS, use the brute force method of defining the
		size of variables; we should really get an autoconf file
		for MS-DOS.

Mon Sep 28 12:00:00 1995  John Rivlin <jrivlin@fusion.com>
	
	* gssapi_generic.h: Modified to use build in compiler symbols rather
		than relying on _MACINTOSH so the projects can include the file
		without using our headers.

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Mon Sep 25 16:53:00 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 13 10:36:32 1995 Keith Vetter (keithv@fusion.com)

	* oid_ops.c: signed/unsigned mismatch, removed unused variables.
	* util_oid.c: changed int to a size_t.

Wed Sep  6 12:00:00 1995  James Mattly  <mattly@fusion.com>
	* gssapiP_generic.h:  changed a path bearing include for MACINTOSH
	* gssapi_generic.h:  changed a path bearing include for MACINTOSH
	* util_cannonhost.h:  changed a path bearing include for MACINTOSH
	* utl_nohash_validate.h:  changed a path bearing include for MACINTOSH,
		also we don't have limits.h


Thu Aug 31 11:43:59 EDT 1995	Paul Park	(pjpark@mit.edu)
	* gssapi.h - Update to V2 API.  Also use autoconf.h if USE_AUTOCONF_H
		is defined, otherwise resort to brute force.  Remove const_
		gss_OID, as it's not defined in the API.