@@ -46,12 +46,22 @@
    (ptr)[3] = (char) ((bigend)?((num)&0xff):((num)>>24)); \
    (ptr) += 4;
 
+#define TWRITE_INT16(ptr, num, bigend) \
+   (ptr)[0] = (char) ((bigend)?((num)>>24):((num)&0xff)); \
+   (ptr)[1] = (char) ((bigend)?(((num)>>16)&0xff):(((num)>>8)&0xff)); \
+   (ptr) += 2;
+
 #define TREAD_INT(ptr, num, bigend) \
    (num) = (((ptr)[0]<<((bigend)?24: 0)) | \
             ((ptr)[1]<<((bigend)?16: 8)) | \
             ((ptr)[2]<<((bigend)? 8:16)) | \
             ((ptr)[3]<<((bigend)? 0:24))); \
    (ptr) += 4;
+
+#define TREAD_INT16(ptr, num, bigend) \
+   (num) = (((ptr)[0]<<((bigend)?24: 0)) | \
+            ((ptr)[1]<<((bigend)?16: 8))); \
+   (ptr) += 2;
 
 #define TWRITE_STR(ptr, str, len) \
    memcpy((ptr), (char *) (str), (len)); \
